--- a/TP.ipynb
+++ b/TP.ipynb
@@ -79,7 +79,7 @@
     "        U_new = update_matrix(X, centers, m)\n",
     "        diff = np.linalg.norm(U_new - U)  \n",
     "        print(f\"Iter {iteration}: ||U_new - U|| = {diff:.6e}\")  \n",
-    "        if diff < error:  # ← condition d'arrêt manquante\n",
+    "        if diff < error:\n",
     "            print(f\"Convergence atteinte à l'itération {iteration}\")\n",
     "            break\n",
     "        U = U_new\n",
