--- a/TP.ipynb
+++ b/TP.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
     "\n",
     "    plt.subplot(2, K+1, 2)\n",
     "    plt.imshow(labels, cmap='tab20')\n",
-    "    plt.title(\"Segmentation (argmax)\")\n",
+    "    plt.title(\"Segmentation\")\n",
     "    plt.axis('off')\n",
     "\n",
     "    for j in range(K):\n",
